# secret-scraper-in-rust

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  Session.vim  result.csv  setting.yaml  settings.yaml
.github/workflows/: lint.yaml  lint_and_test.yaml
.memory-bank/: README.md  lessons.md
docs/: developer_note.md
docs/superpowers/specs/: 2026-05-11-graceful-shutdown-design.md
examples/: crawler.rs  logging.rs  scan_facade.rs
src/: cli.rs  crawler.rs  error.rs  facade.rs  filter.rs  handler.rs  lib.rs  logging.rs  main.rs  output.rs  rate_limiter.rs  scanner.rs  urlparser.rs
src/scraper/: bo.rs  crawler.rs  mod.rs  worker.rs
tests/: binary_tests.rs  cli_tests.rs  config_tests.rs  crawler_facade_tests.rs  file_scanner_facade_tests.rs  output_tests.rs  urlparser_test.rs
